--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_activity_main">onTarget</string>
     <string name="package_name">io.ionic.starter</string>
     <string name="custom_url_scheme">io.ionic.starter</string>
-</resources>
+    <string name="fb_app_id">2517514145185829</string>
+    <string name="fb_app_name">ADL</string>
+    <string name="fb_login_protocol_scheme">fb2517514145185829</string></resources>
