--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="title_activity_main">onTarget</string>
     <string name="package_name">io.ionic.starter</string>
     <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="fb_app_name">some</string>
+    <string name="fb_app_id">some</string>
+
+
 </resources>
